src/scss/pages/new-section/_competition.scss
.competition{
	padding: 56rem 0;
	@include maxWidth($sm){
		padding: 42rem 0 24rem;
	}
	&-wrap{
		margin-top: 63rem;
	}
	&-item{
		display: flex;
		align-items: center;
		column-gap: 32rem;
		padding-bottom: 16rem;
		margin-bottom: 16rem;
		border-bottom: 1px solid rgba(229, 231, 232, 6);
		@include maxWidth($sm){
			flex-direction: column;
			justify-content: center;
			align-items: center;
			text-align: center;
		}
		&:first-of-type{
			padding-bottom: 0;
			margin-bottom: 33rem;
			border-bottom: 0;

			@include maxWidth($sm){
				display: none;
			}
			.competition-item-text{
				color: var(--color-black);
				font: var(--font-body-l);
			}
		}
		&-title{
			width: 100%;
			max-width: 192rem;
			display: flex;
			align-items: center;
			font: var(--font-body-s);
			color: var(--color-gray-700);
			@include maxWidth($sm){
				justify-content: center;
				margin-bottom: 8rem;
			}
		}
		&-icon{
			//width: 40rem;
			//height: 40rem;
			display: inline-block;
			margin-right: 12rem;
		}
		&-logo{
			max-width: 115rem;
			@include maxWidth($sm){
				margin-bottom: 8rem;
			}
		}
		&-text{
			width: 100%;
			max-width: 304rem;
			@include maxWidth($sm){
				margin-bottom: 12rem;
			}
			h4{
				color: var(--color-gray-700);
			}
			p{
				color: var(--color-black);
				font: var(--font-body-r);
			}
			.text-gradient-btn{
				display: inline-block;
				font: var(--font-body-s-mobile);
				color: var(--color-black);
				padding: 8rem 12rem;
				border-radius: 8px;
				z-index: 2;
				position: relative;
				&:before,
				&:after{
					position: absolute;
					content: '';
					border-radius: inherit;
				}
				&:before{
					width: calc(100% - 2px);
					height: calc(100% - 2px);
					background: var(--color-primary-4);
					left: 1px;
					top: 1px;
					z-index: -1;
					border-radius: 7px;
				}
				&:after{
					left: 0;
					top: 0;
					width: 100%;
					height: 100%;
					background: var(--color-primary-gradient);
					z-index: -2;
				}
			}
			span{
				display: none;
				@include maxWidth($sm){
					display: block;
					margin-bottom: 8rem;
				}
			}
		}
	}
	&-media{
		img{
			width: 100%;
			height: auto;
			object-fit: cover;
		}
	}
}

